--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <script>
         // 【重要】這裡換成你從 Google 得到的網址
-        const SCRIPT_URL = "AKfycbzysLjcOtaBhXzHGHbYN2YWEqONNjBVS4ZJ8qF6B6r2Gy8JCoJcryn9XRazwIuSP8CAdQ";
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwCTTOK3eGYRHJzGWGPQC8ONgxzNtgb_1U5gIftTBBSJToFlEtFTwaygjg3HzIB7iRP6w/exec";
 
         let curMood = "", usedFill = false, drawing = false;
         const canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d', {willReadFrequently:true});
@@ -122,3 +122,4 @@
 </body>
 
 </html>
+
