--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <script>
         // 【重要】這裡換成你從 Google 得到的網址
-        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby64b4I9Wf-VdDG5gnmoITlHpaSkncgGn_LQZntg8FffWotLY-C4wOP6Jlmu_j7KohFug/exec";
+        const SCRIPT_URL = https://script.google.com/macros/s/AKfycby9gh1LKcLZu3Z2Dm_ZOaYzigh9JWdwkoijXdc9p0bQ-HVSozhvtG4gaudRE1K-i7qjWA/exec;
 
         let curMood = "", usedFill = false, drawing = false;
         const canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d', {willReadFrequently:true});
@@ -122,5 +122,6 @@
 </body>
 
 </html>
+
 
 
